force-app/main/default/objects/SF_Training_Topic__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manasi</fullName>
            </value>
            <value>
                <fullName>Vinod</fullName>
            </value>
            <value>
                <fullName>Kumar</fullName>
            </value>
            <value>
                <fullName>Rohan</fullName>
            </value>
            <value>
                <fullName>Sunanda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>