force-app/main/default/objects/SF_Training_Topic__c/fields/Topic_Category__c.field-meta.xml
<CustomField>
    <fullName>Topic_Category__c</fullName>
    <label>Topic Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>